--- a/css/steps/stepResult.css
+++ b/css/steps/stepResult.css
@@ -1,8 +1,36 @@
 .result{
-    background-color: #F5B945;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
     border-radius: 10px;
+    border: solid 1px #CAD0D7;
     color: #424852;
-    margin: 1.5rem;
+    flex-grow: 3;
+    margin: 3rem;
+    padding-bottom: 3rem;
     text-align: center;
-    width: 70%;
+    width: 50%;
+}
+
+.result-Title{
+    font-size: 2rem;
+}
+
+.div-result{
+    align-self: center;
+    display: flex;
+    font-size: 1.5rem;
+    width: 600px;
+}
+
+.textResult{
+    background-color: #FBD277;
+    padding: 10px;
+    width: 400px;
+}
+
+.valueResult{
+    background-color: #F5B945;
+    padding: 10px;
+    width: 200px;
 }
