--- a/css/steps/step.css
+++ b/css/steps/step.css
@@ -26,5 +26,12 @@
     font-weight: lighter;
     text-align: center;
     padding: 5px 10px;
-    margin: 1rem;
+    margin: .5rem;
+}
+
+.inputEmpty{
+    background-color: red;
+    border-radius: 10px;
+    color: white;
+    padding: 5px;
 }
