--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,19 @@ header{
 }
 
 .logo{
-    background-color: #F5B945;
-    border-radius: 5px;
+    align-items: center;
+    background-color: white;
+    border-radius: 10px;
     color: #424852;
-    display: inline-block;
-    height: 30%;
-    padding: 1rem 1.5rem 1rem 1.5rem;
+    display: flex;
+    font-size: 2rem;
     margin: 0 3rem;
+}
+.logo img{
+    border-radius: 10px;
+    height: 71px;
+    margin-left: 10px;
+    width: 85px;
 }
 
 main{
@@ -44,10 +50,17 @@ main{
     width: 100%;
 }
 
+
 .title{
     text-align: center;
     font-weight: normal;
     font-size: 2.5rem;
+}
+
+.subTitle{
+    text-align: center;
+    font-weight: lighter;
+    font-size: 1.5rem;
 }
 
 footer{
